--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aspirity-test-wish-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://myou5uf.github.io/aspirity-test-wish-list/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "^16.18.14",
@@ -9,6 +10,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
